--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,6 @@ jobs: # a collection of steps
           paths:
             - ~/.gradle/caches
           key: v1-gradle-cache-{{ checksum "build.gradle" }}
-      - store_test_results:
-      # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: build/test-results/test
-      - store_artifacts: # Upload test results for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: build/test-results/test
-          when: always
       - run:
           name: Assemble JAR
           command: |
@@ -44,6 +38,8 @@ jobs: # a collection of steps
       # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
       - store_artifacts:
           path: build/libs
+      - store_artifacts:
+          path: build/distributions
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 workflows:
   version: 2
